src/test/ui/pub/pub-ident-struct.stderr
error: missing `struct` for struct definition
  --> $DIR/pub-ident-struct.rs:1:4
   |
LL | pub S {
   |    ^
help: add `struct` here to parse `S` as a public struct
   |
LL | pub struct S {
   |     ^^^^^^

error: aborting due to previous error

