src/test/ui/pub/pub-ident-struct.rs
pub S {
//~^ ERROR missing `struct` for struct definition
}
fn main() {}
